// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selectors: signals complaints by cohort details should select details 1`] = `
Object {
  "details": Object {
    "data": Array [
      Object {
        "date": "2017-12-27",
        "p_14d_fbl": null,
        "p_365d_fbl": null,
        "p_90d_fbl": null,
        "p_new_fbl": null,
        "p_total_fbl": null,
        "p_uneng_fbl": null,
      },
      Object {
        "date": "2017-12-28",
        "p_14d_fbl": null,
        "p_365d_fbl": null,
        "p_90d_fbl": null,
        "p_new_fbl": null,
        "p_total_fbl": null,
        "p_uneng_fbl": null,
      },
      Object {
        "date": "2017-12-29",
        "p_14d_fbl": null,
        "p_365d_fbl": null,
        "p_90d_fbl": null,
        "p_new_fbl": null,
        "p_total_fbl": null,
        "p_uneng_fbl": null,
      },
      Object {
        "date": "2017-12-30",
        "p_14d_fbl": null,
        "p_365d_fbl": null,
        "p_90d_fbl": null,
        "p_new_fbl": null,
        "p_total_fbl": null,
        "p_uneng_fbl": null,
      },
      Object {
        "date": "2017-12-31",
        "p_14d_fbl": null,
        "p_365d_fbl": null,
        "p_90d_fbl": null,
        "p_new_fbl": null,
        "p_total_fbl": null,
        "p_uneng_fbl": null,
      },
      Object {
        "date": "2018-01-01",
        "p_14d_fbl": 0.5,
        "p_365d_fbl": 0.5,
        "p_new_fbl": 0.5,
        "p_total_fbl": 0.25,
        "p_uneng_fbl": 0.5,
      },
      Object {
        "date": "2018-01-02",
        "p_14d_fbl": null,
        "p_365d_fbl": null,
        "p_90d_fbl": null,
        "p_new_fbl": null,
        "p_total_fbl": null,
        "p_uneng_fbl": null,
      },
      Object {
        "date": "2018-01-03",
        "p_14d_fbl": 0.1,
        "p_365d_fbl": 0.1,
        "p_new_fbl": 0.1,
        "p_total_fbl": 0.5,
        "p_uneng_fbl": 0.1,
      },
    ],
    "dataEngRecency": Array [
      Object {
        "c_14d": null,
        "c_365d": null,
        "c_90d": null,
        "c_new": null,
        "c_total": null,
        "c_uneng": null,
        "date": "2017-12-27",
      },
      Object {
        "c_14d": null,
        "c_365d": null,
        "c_90d": null,
        "c_new": null,
        "c_total": null,
        "c_uneng": null,
        "date": "2017-12-28",
      },
      Object {
        "c_14d": null,
        "c_365d": null,
        "c_90d": null,
        "c_new": null,
        "c_total": null,
        "c_uneng": null,
        "date": "2017-12-29",
      },
      Object {
        "c_14d": null,
        "c_365d": null,
        "c_90d": null,
        "c_new": null,
        "c_total": null,
        "c_uneng": null,
        "date": "2017-12-30",
      },
      Object {
        "c_14d": null,
        "c_365d": null,
        "c_90d": null,
        "c_new": null,
        "c_total": null,
        "c_uneng": null,
        "date": "2017-12-31",
      },
      Object {
        "c_14d": 0.2,
        "c_365d": 0.2,
        "c_new": 0.2,
        "c_total": 25,
        "c_uneng": 0.2,
        "date": "2018-01-01",
      },
      Object {
        "c_14d": null,
        "c_365d": null,
        "c_90d": null,
        "c_new": null,
        "c_total": null,
        "c_uneng": null,
        "date": "2018-01-02",
      },
      Object {
        "c_14d": 0.2,
        "c_365d": 0.2,
        "c_new": 0.2,
        "c_total": 50,
        "c_uneng": 0.2,
        "date": "2018-01-03",
      },
    ],
    "empty": false,
    "error": null,
    "loading": false,
  },
  "facet": "sending_domain",
  "facetId": "test.com",
  "subaccountId": "101",
}
`;

exports[`Selectors: signals engagement rate by cohort details should select details 1`] = `
Object {
  "details": Object {
    "data": Array [
      Object {
        "date": "2017-12-27",
        "p_14d_eng": null,
        "p_365d_eng": null,
        "p_90d_eng": null,
        "p_new_eng": null,
        "p_total_eng": null,
        "p_uneng_eng": null,
      },
      Object {
        "date": "2017-12-28",
        "p_14d_eng": null,
        "p_365d_eng": null,
        "p_90d_eng": null,
        "p_new_eng": null,
        "p_total_eng": null,
        "p_uneng_eng": null,
      },
      Object {
        "date": "2017-12-29",
        "p_14d_eng": null,
        "p_365d_eng": null,
        "p_90d_eng": null,
        "p_new_eng": null,
        "p_total_eng": null,
        "p_uneng_eng": null,
      },
      Object {
        "date": "2017-12-30",
        "p_14d_eng": null,
        "p_365d_eng": null,
        "p_90d_eng": null,
        "p_new_eng": null,
        "p_total_eng": null,
        "p_uneng_eng": null,
      },
      Object {
        "date": "2017-12-31",
        "p_14d_eng": null,
        "p_365d_eng": null,
        "p_90d_eng": null,
        "p_new_eng": null,
        "p_total_eng": null,
        "p_uneng_eng": null,
      },
      Object {
        "date": "2018-01-01",
        "p_14d_eng": 5,
        "p_365d_eng": 5,
        "p_new_eng": 5,
        "p_total_eng": 25,
        "p_uneng_eng": 5,
      },
      Object {
        "date": "2018-01-02",
        "p_14d_eng": null,
        "p_365d_eng": null,
        "p_90d_eng": null,
        "p_new_eng": null,
        "p_total_eng": null,
        "p_uneng_eng": null,
      },
      Object {
        "date": "2018-01-03",
        "p_14d_eng": 10,
        "p_365d_eng": 10,
        "p_new_eng": 10,
        "p_total_eng": 50,
        "p_uneng_eng": 10,
      },
    ],
    "empty": false,
    "error": null,
    "loading": false,
  },
  "facet": "sending_domain",
  "facetId": "test.com",
  "subaccountId": "101",
}
`;

exports[`Selectors: signals engagement recency details should be empty with only fill data when not loading 1`] = `
Object {
  "details": Object {
    "data": Array [
      Object {
        "c_14d": null,
        "c_365d": null,
        "c_90d": null,
        "c_new": null,
        "c_total": null,
        "c_uneng": null,
        "date": "2017-12-27",
      },
      Object {
        "c_14d": null,
        "c_365d": null,
        "c_90d": null,
        "c_new": null,
        "c_total": null,
        "c_uneng": null,
        "date": "2017-12-28",
      },
      Object {
        "c_14d": null,
        "c_365d": null,
        "c_90d": null,
        "c_new": null,
        "c_total": null,
        "c_uneng": null,
        "date": "2017-12-29",
      },
      Object {
        "c_14d": null,
        "c_365d": null,
        "c_90d": null,
        "c_new": null,
        "c_total": null,
        "c_uneng": null,
        "date": "2017-12-30",
      },
      Object {
        "c_14d": null,
        "c_365d": null,
        "c_90d": null,
        "c_new": null,
        "c_total": null,
        "c_uneng": null,
        "date": "2017-12-31",
      },
      Object {
        "c_14d": null,
        "c_365d": null,
        "c_90d": null,
        "c_new": null,
        "c_total": null,
        "c_uneng": null,
        "date": "2018-01-01",
      },
      Object {
        "c_14d": null,
        "c_365d": null,
        "c_90d": null,
        "c_new": null,
        "c_total": null,
        "c_uneng": null,
        "date": "2018-01-02",
      },
      Object {
        "c_14d": null,
        "c_365d": null,
        "c_90d": null,
        "c_new": null,
        "c_total": null,
        "c_uneng": null,
        "date": "2018-01-03",
      },
    ],
    "empty": true,
    "error": undefined,
    "loading": false,
  },
  "facet": "sending_domain",
  "facetId": "test.com",
  "subaccountId": "101",
}
`;

exports[`Selectors: signals engagement recency details should select details 1`] = `
Object {
  "details": Object {
    "data": Array [
      Object {
        "c_14d": null,
        "c_365d": null,
        "c_90d": null,
        "c_new": null,
        "c_total": null,
        "c_uneng": null,
        "date": "2017-12-27",
      },
      Object {
        "c_14d": null,
        "c_365d": null,
        "c_90d": null,
        "c_new": null,
        "c_total": null,
        "c_uneng": null,
        "date": "2017-12-28",
      },
      Object {
        "c_14d": null,
        "c_365d": null,
        "c_90d": null,
        "c_new": null,
        "c_total": null,
        "c_uneng": null,
        "date": "2017-12-29",
      },
      Object {
        "c_14d": null,
        "c_365d": null,
        "c_90d": null,
        "c_new": null,
        "c_total": null,
        "c_uneng": null,
        "date": "2017-12-30",
      },
      Object {
        "c_14d": null,
        "c_365d": null,
        "c_90d": null,
        "c_new": null,
        "c_total": null,
        "c_uneng": null,
        "date": "2017-12-31",
      },
      Object {
        "c_14d": 0.2,
        "c_365d": 0.2,
        "c_new": 0.2,
        "c_total": 25,
        "c_uneng": 0.2,
        "date": "2018-01-01",
      },
      Object {
        "c_14d": null,
        "c_365d": null,
        "c_90d": null,
        "c_new": null,
        "c_total": null,
        "c_uneng": null,
        "date": "2018-01-02",
      },
      Object {
        "c_14d": 0.2,
        "c_365d": 0.2,
        "c_new": 0.2,
        "c_total": 50,
        "c_uneng": 0.2,
        "date": "2018-01-03",
      },
    ],
    "empty": false,
    "error": null,
    "loading": false,
  },
  "facet": "sending_domain",
  "facetId": "test.com",
  "subaccountId": "101",
}
`;

exports[`Selectors: signals health score details should be empty with only fill data when not loading 1`] = `
Object {
  "details": Object {
    "data": Array [
      Object {
        "date": "2017-12-27",
        "health_score": null,
        "injections": null,
        "ranking": "danger",
        "weights": Array [
          Object {
            "weight": null,
            "weight_type": "Hard Bounces",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Complaints",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Other bounces",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Transient Failures",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Block Bounces",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "List Quality",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "eng cohorts: new, 14-day",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "eng cohorts: unengaged",
            "weight_value": null,
          },
        ],
      },
      Object {
        "date": "2017-12-28",
        "health_score": null,
        "injections": null,
        "ranking": "danger",
        "weights": Array [
          Object {
            "weight": null,
            "weight_type": "Hard Bounces",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Complaints",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Other bounces",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Transient Failures",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Block Bounces",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "List Quality",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "eng cohorts: new, 14-day",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "eng cohorts: unengaged",
            "weight_value": null,
          },
        ],
      },
      Object {
        "date": "2017-12-29",
        "health_score": null,
        "injections": null,
        "ranking": "danger",
        "weights": Array [
          Object {
            "weight": null,
            "weight_type": "Hard Bounces",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Complaints",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Other bounces",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Transient Failures",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Block Bounces",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "List Quality",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "eng cohorts: new, 14-day",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "eng cohorts: unengaged",
            "weight_value": null,
          },
        ],
      },
      Object {
        "date": "2017-12-30",
        "health_score": null,
        "injections": null,
        "ranking": "danger",
        "weights": Array [
          Object {
            "weight": null,
            "weight_type": "Hard Bounces",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Complaints",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Other bounces",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Transient Failures",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Block Bounces",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "List Quality",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "eng cohorts: new, 14-day",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "eng cohorts: unengaged",
            "weight_value": null,
          },
        ],
      },
      Object {
        "date": "2017-12-31",
        "health_score": null,
        "injections": null,
        "ranking": "danger",
        "weights": Array [
          Object {
            "weight": null,
            "weight_type": "Hard Bounces",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Complaints",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Other bounces",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Transient Failures",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Block Bounces",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "List Quality",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "eng cohorts: new, 14-day",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "eng cohorts: unengaged",
            "weight_value": null,
          },
        ],
      },
      Object {
        "date": "2018-01-01",
        "health_score": null,
        "injections": null,
        "ranking": "danger",
        "weights": Array [
          Object {
            "weight": null,
            "weight_type": "Hard Bounces",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Complaints",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Other bounces",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Transient Failures",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Block Bounces",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "List Quality",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "eng cohorts: new, 14-day",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "eng cohorts: unengaged",
            "weight_value": null,
          },
        ],
      },
      Object {
        "date": "2018-01-02",
        "health_score": null,
        "injections": null,
        "ranking": "danger",
        "weights": Array [
          Object {
            "weight": null,
            "weight_type": "Hard Bounces",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Complaints",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Other bounces",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Transient Failures",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Block Bounces",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "List Quality",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "eng cohorts: new, 14-day",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "eng cohorts: unengaged",
            "weight_value": null,
          },
        ],
      },
      Object {
        "date": "2018-01-03",
        "health_score": null,
        "injections": null,
        "ranking": "danger",
        "weights": Array [
          Object {
            "weight": null,
            "weight_type": "Hard Bounces",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Complaints",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Other bounces",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Transient Failures",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Block Bounces",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "List Quality",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "eng cohorts: new, 14-day",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "eng cohorts: unengaged",
            "weight_value": null,
          },
        ],
      },
    ],
    "empty": true,
    "error": undefined,
    "loading": undefined,
  },
  "facet": "sending_domain",
  "facetId": "test.com",
  "subaccountId": "101",
}
`;

exports[`Selectors: signals health score details should select details 1`] = `
Object {
  "details": Object {
    "data": Array [
      Object {
        "date": "2017-12-27",
        "health_score": null,
        "injections": null,
        "ranking": "danger",
        "weights": Array [
          Object {
            "weight": null,
            "weight_type": "Hard Bounces",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Complaints",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Other bounces",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Transient Failures",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Block Bounces",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "List Quality",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "eng cohorts: new, 14-day",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "eng cohorts: unengaged",
            "weight_value": null,
          },
        ],
      },
      Object {
        "date": "2017-12-28",
        "health_score": null,
        "injections": null,
        "ranking": "danger",
        "weights": Array [
          Object {
            "weight": null,
            "weight_type": "Hard Bounces",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Complaints",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Other bounces",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Transient Failures",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Block Bounces",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "List Quality",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "eng cohorts: new, 14-day",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "eng cohorts: unengaged",
            "weight_value": null,
          },
        ],
      },
      Object {
        "date": "2017-12-29",
        "health_score": null,
        "injections": null,
        "ranking": "danger",
        "weights": Array [
          Object {
            "weight": null,
            "weight_type": "Hard Bounces",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Complaints",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Other bounces",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Transient Failures",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Block Bounces",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "List Quality",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "eng cohorts: new, 14-day",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "eng cohorts: unengaged",
            "weight_value": null,
          },
        ],
      },
      Object {
        "date": "2017-12-30",
        "health_score": null,
        "injections": null,
        "ranking": "danger",
        "weights": Array [
          Object {
            "weight": null,
            "weight_type": "Hard Bounces",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Complaints",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Other bounces",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Transient Failures",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Block Bounces",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "List Quality",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "eng cohorts: new, 14-day",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "eng cohorts: unengaged",
            "weight_value": null,
          },
        ],
      },
      Object {
        "date": "2017-12-31",
        "health_score": null,
        "injections": null,
        "ranking": "danger",
        "weights": Array [
          Object {
            "weight": null,
            "weight_type": "Hard Bounces",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Complaints",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Other bounces",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Transient Failures",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "Block Bounces",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "List Quality",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "eng cohorts: new, 14-day",
            "weight_value": null,
          },
          Object {
            "weight": null,
            "weight_type": "eng cohorts: unengaged",
            "weight_value": null,
          },
        ],
      },
      Object {
        "date": "2018-01-01",
        "health_score": 0.74321,
        "injections": 182400,
        "ranking": "warning",
        "weights": Array [
          Object {
            "weight": -0.1,
            "weight_type": "Other bounces",
            "weight_value": 0.5,
          },
          Object {
            "weight": 0.5,
            "weight_type": "eng cohorts: new, 14-day",
            "weight_value": 0.5,
          },
          Object {
            "weight": 0.7,
            "weight_type": "Transient Failures",
            "weight_value": 0.5,
          },
        ],
      },
      Object {
        "date": "2018-01-02",
        "health_score": 0.8,
        "injections": null,
        "ranking": "good",
        "weights": Array [],
      },
      Object {
        "WoW": null,
        "date": "2018-01-03",
        "health_score": 0.98,
        "injections": 35000,
        "ranking": "good",
        "weights": Array [],
      },
    ],
    "empty": false,
    "error": undefined,
    "loading": false,
  },
  "facet": "sending_domain",
  "facetId": "test.com",
  "subaccountId": "101",
}
`;

exports[`Selectors: signals selectCurrentHealthScoreDashboard returns data 1`] = `
Object {
  "WoW": -7,
  "current_DoD": 22.5,
  "current_health_score": 98,
  "current_weights": Array [],
  "error": undefined,
  "history": Array [
    Object {
      "date": "2017-12-27",
      "health_score": null,
      "injections": null,
      "ranking": null,
    },
    Object {
      "date": "2017-12-28",
      "health_score": null,
      "injections": null,
      "ranking": null,
    },
    Object {
      "date": "2017-12-29",
      "health_score": null,
      "injections": null,
      "ranking": null,
    },
    Object {
      "date": "2017-12-30",
      "health_score": null,
      "injections": null,
      "ranking": null,
    },
    Object {
      "date": "2017-12-31",
      "health_score": null,
      "injections": null,
      "ranking": null,
    },
    Object {
      "date": "2018-01-01",
      "health_score": 74.3,
      "injections": 100,
      "ranking": "warning",
      "weights": Array [],
    },
    Object {
      "date": "2018-01-02",
      "health_score": 80,
      "injections": 100,
      "ranking": "good",
    },
    Object {
      "WoW": null,
      "date": "2018-01-03",
      "health_score": 98,
      "injections": 100,
      "ranking": "good",
      "weights": Array [],
    },
  ],
  "loading": undefined,
  "sending_domain": "test.com",
  "sid": -1,
}
`;

exports[`Selectors: signals selectEngagementRecencyOverview returns all overview data 1`] = `
Object {
  "data": Array [
    Object {
      "WoW": 10,
      "current_c_14d": 10,
      "current_c_total": 50,
      "current_engaged_recipients": 10,
      "current_relative_engaged_recipients": 20,
      "history": Array [
        Object {
          "date": "2017-12-27",
          "engaged_recipients": null,
          "relative_engaged_recipients": null,
        },
        Object {
          "date": "2017-12-28",
          "engaged_recipients": null,
          "relative_engaged_recipients": null,
        },
        Object {
          "date": "2017-12-29",
          "engaged_recipients": null,
          "relative_engaged_recipients": null,
        },
        Object {
          "date": "2017-12-30",
          "engaged_recipients": null,
          "relative_engaged_recipients": null,
        },
        Object {
          "date": "2017-12-31",
          "engaged_recipients": null,
          "relative_engaged_recipients": null,
        },
        Object {
          "c_14d": 5,
          "c_365d": 5,
          "c_new": 5,
          "c_total": 25,
          "c_uneng": 5,
          "date": "2018-01-01",
          "engaged_recipients": 5,
          "relative_engaged_recipients": 20,
        },
        Object {
          "date": "2018-01-02",
          "engaged_recipients": null,
          "relative_engaged_recipients": null,
        },
        Object {
          "c_14d": 10,
          "c_365d": 10,
          "c_new": 10,
          "c_total": 50,
          "c_uneng": 10,
          "date": "2018-01-03",
          "engaged_recipients": 10,
          "relative_engaged_recipients": 20,
        },
      ],
      "sending_domain": "test.com",
      "total_engagement": 75,
    },
  ],
  "error": null,
  "loading": false,
  "metaData": Object {
    "currentMax": 10,
    "currentRelativeMax": 20,
    "max": 10,
    "relativeMax": 20,
  },
  "total_count": 10,
}
`;

exports[`Selectors: signals selectEngagementRecencyOverviewData returns data 1`] = `
Array [
  Object {
    "WoW": 10,
    "current_c_14d": 10,
    "current_c_total": 50,
    "current_engaged_recipients": 10,
    "current_relative_engaged_recipients": 20,
    "history": Array [
      Object {
        "date": "2017-12-27",
        "engaged_recipients": null,
        "relative_engaged_recipients": null,
      },
      Object {
        "date": "2017-12-28",
        "engaged_recipients": null,
        "relative_engaged_recipients": null,
      },
      Object {
        "date": "2017-12-29",
        "engaged_recipients": null,
        "relative_engaged_recipients": null,
      },
      Object {
        "date": "2017-12-30",
        "engaged_recipients": null,
        "relative_engaged_recipients": null,
      },
      Object {
        "date": "2017-12-31",
        "engaged_recipients": null,
        "relative_engaged_recipients": null,
      },
      Object {
        "c_14d": 5,
        "c_365d": 5,
        "c_new": 5,
        "c_total": 25,
        "c_uneng": 5,
        "date": "2018-01-01",
        "engaged_recipients": 5,
        "relative_engaged_recipients": 20,
      },
      Object {
        "date": "2018-01-02",
        "engaged_recipients": null,
        "relative_engaged_recipients": null,
      },
      Object {
        "c_14d": 10,
        "c_365d": 10,
        "c_new": 10,
        "c_total": 50,
        "c_uneng": 10,
        "date": "2018-01-03",
        "engaged_recipients": 10,
        "relative_engaged_recipients": 20,
      },
    ],
    "sending_domain": "test.com",
    "total_engagement": 75,
  },
]
`;

exports[`Selectors: signals selectHealthScoreOverview returns all overview data 1`] = `
Object {
  "data": Array [
    Object {
      "WoW": -7,
      "average_health_score": 84.1,
      "current_DoD": 22.5,
      "current_health_score": 98,
      "current_weights": Array [],
      "history": Array [
        Object {
          "date": "2017-12-27",
          "health_score": null,
          "ranking": null,
        },
        Object {
          "date": "2017-12-28",
          "health_score": null,
          "ranking": null,
        },
        Object {
          "date": "2017-12-29",
          "health_score": null,
          "ranking": null,
        },
        Object {
          "date": "2017-12-30",
          "health_score": null,
          "ranking": null,
        },
        Object {
          "date": "2017-12-31",
          "health_score": null,
          "ranking": null,
        },
        Object {
          "date": "2018-01-01",
          "health_score": 74.3,
          "ranking": "warning",
          "weights": Array [
            Object {
              "weight": 0.5,
              "weight_type": "eng cohorts: new, 14-day",
              "weight_value": 0.5,
            },
            Object {
              "weight": 0.7,
              "weight_type": "Transient Failures",
              "weight_value": 0.5,
            },
            Object {
              "weight": -0.1,
              "weight_type": "Other bounces",
              "weight_value": 0.5,
            },
          ],
        },
        Object {
          "date": "2018-01-02",
          "health_score": 80,
          "ranking": "good",
        },
        Object {
          "WoW": null,
          "date": "2018-01-03",
          "health_score": 98,
          "ranking": "good",
          "weights": Array [],
        },
      ],
      "sending_domain": "test.com",
    },
  ],
  "total_count": 10,
}
`;

exports[`Selectors: signals selectHealthScoreOverviewData returns data 1`] = `
Array [
  Object {
    "WoW": -7,
    "average_health_score": 84.1,
    "current_DoD": 22.5,
    "current_health_score": 98,
    "current_weights": Array [],
    "history": Array [
      Object {
        "date": "2017-12-27",
        "health_score": null,
        "ranking": null,
      },
      Object {
        "date": "2017-12-28",
        "health_score": null,
        "ranking": null,
      },
      Object {
        "date": "2017-12-29",
        "health_score": null,
        "ranking": null,
      },
      Object {
        "date": "2017-12-30",
        "health_score": null,
        "ranking": null,
      },
      Object {
        "date": "2017-12-31",
        "health_score": null,
        "ranking": null,
      },
      Object {
        "date": "2018-01-01",
        "health_score": 74.3,
        "ranking": "warning",
        "weights": Array [
          Object {
            "weight": 0.5,
            "weight_type": "eng cohorts: new, 14-day",
            "weight_value": 0.5,
          },
          Object {
            "weight": 0.7,
            "weight_type": "Transient Failures",
            "weight_value": 0.5,
          },
          Object {
            "weight": -0.1,
            "weight_type": "Other bounces",
            "weight_value": 0.5,
          },
        ],
      },
      Object {
        "date": "2018-01-02",
        "health_score": 80,
        "ranking": "good",
      },
      Object {
        "WoW": null,
        "date": "2018-01-03",
        "health_score": 98,
        "ranking": "good",
        "weights": Array [],
      },
    ],
    "sending_domain": "test.com",
  },
]
`;

exports[`Selectors: signals selectSpamHitsOverview returns all overview data 1`] = `
Object {
  "data": Array [
    Object {
      "WoW": 0,
      "current_relative_trap_hits": 0.1,
      "current_trap_hits": 35,
      "history": Array [
        Object {
          "date": "2017-12-27",
          "injections": null,
          "ranking": null,
          "relative_trap_hits": null,
          "trap_hits": null,
        },
        Object {
          "date": "2017-12-28",
          "injections": null,
          "ranking": null,
          "relative_trap_hits": null,
          "trap_hits": null,
        },
        Object {
          "date": "2017-12-29",
          "injections": null,
          "ranking": null,
          "relative_trap_hits": null,
          "trap_hits": null,
        },
        Object {
          "date": "2017-12-30",
          "injections": null,
          "ranking": null,
          "relative_trap_hits": null,
          "trap_hits": null,
        },
        Object {
          "date": "2017-12-31",
          "injections": null,
          "ranking": null,
          "relative_trap_hits": null,
          "trap_hits": null,
        },
        Object {
          "date": "2018-01-01",
          "injections": 182400,
          "ranking": "bad",
          "relative_trap_hits": 0.25,
          "trap_hits": 456,
        },
        Object {
          "date": "2018-01-02",
          "injections": null,
          "ranking": null,
          "relative_trap_hits": null,
          "trap_hits": null,
        },
        Object {
          "date": "2018-01-03",
          "injections": 35000,
          "ranking": "good",
          "relative_trap_hits": 0.1,
          "trap_hits": 35,
        },
      ],
      "sending_domain": "test.com",
      "total_injections": 217400,
    },
    Object {
      "WoW": null,
      "current_relative_trap_hits": null,
      "current_trap_hits": null,
      "history": Array [
        Object {
          "date": "2017-12-27",
          "injections": null,
          "ranking": null,
          "relative_trap_hits": null,
          "trap_hits": null,
        },
        Object {
          "date": "2017-12-28",
          "injections": null,
          "ranking": null,
          "relative_trap_hits": null,
          "trap_hits": null,
        },
        Object {
          "date": "2017-12-29",
          "injections": null,
          "ranking": null,
          "relative_trap_hits": null,
          "trap_hits": null,
        },
        Object {
          "date": "2017-12-30",
          "injections": null,
          "ranking": null,
          "relative_trap_hits": null,
          "trap_hits": null,
        },
        Object {
          "date": "2017-12-31",
          "injections": null,
          "ranking": null,
          "relative_trap_hits": null,
          "trap_hits": null,
        },
        Object {
          "date": "2018-01-01",
          "injections": 282400,
          "ranking": "bad",
          "relative_trap_hits": 0.3,
          "trap_hits": 856,
        },
        Object {
          "date": "2018-01-02",
          "injections": 50000,
          "ranking": "good",
          "relative_trap_hits": 0.1,
          "trap_hits": 50,
        },
        Object {
          "date": "2018-01-03",
          "injections": null,
          "ranking": null,
          "relative_trap_hits": null,
          "trap_hits": null,
        },
      ],
      "sending_domain": "null.test.com",
      "total_injections": 332400,
    },
  ],
  "error": null,
  "loading": false,
  "metaData": Object {
    "currentMax": 35,
    "currentRelativeMax": 0.1,
    "max": 856,
    "relativeMax": 0.3,
  },
  "total_count": 1,
}
`;

exports[`Selectors: signals selectSpamHitsOverviewData returns data 1`] = `
Array [
  Object {
    "WoW": 0,
    "current_relative_trap_hits": 0.1,
    "current_trap_hits": 35,
    "history": Array [
      Object {
        "date": "2017-12-27",
        "injections": null,
        "ranking": null,
        "relative_trap_hits": null,
        "trap_hits": null,
      },
      Object {
        "date": "2017-12-28",
        "injections": null,
        "ranking": null,
        "relative_trap_hits": null,
        "trap_hits": null,
      },
      Object {
        "date": "2017-12-29",
        "injections": null,
        "ranking": null,
        "relative_trap_hits": null,
        "trap_hits": null,
      },
      Object {
        "date": "2017-12-30",
        "injections": null,
        "ranking": null,
        "relative_trap_hits": null,
        "trap_hits": null,
      },
      Object {
        "date": "2017-12-31",
        "injections": null,
        "ranking": null,
        "relative_trap_hits": null,
        "trap_hits": null,
      },
      Object {
        "date": "2018-01-01",
        "injections": 182400,
        "ranking": "bad",
        "relative_trap_hits": 0.25,
        "trap_hits": 456,
      },
      Object {
        "date": "2018-01-02",
        "injections": null,
        "ranking": null,
        "relative_trap_hits": null,
        "trap_hits": null,
      },
      Object {
        "date": "2018-01-03",
        "injections": 35000,
        "ranking": "good",
        "relative_trap_hits": 0.1,
        "trap_hits": 35,
      },
    ],
    "sending_domain": "test.com",
    "total_injections": 217400,
  },
  Object {
    "WoW": null,
    "current_relative_trap_hits": null,
    "current_trap_hits": null,
    "history": Array [
      Object {
        "date": "2017-12-27",
        "injections": null,
        "ranking": null,
        "relative_trap_hits": null,
        "trap_hits": null,
      },
      Object {
        "date": "2017-12-28",
        "injections": null,
        "ranking": null,
        "relative_trap_hits": null,
        "trap_hits": null,
      },
      Object {
        "date": "2017-12-29",
        "injections": null,
        "ranking": null,
        "relative_trap_hits": null,
        "trap_hits": null,
      },
      Object {
        "date": "2017-12-30",
        "injections": null,
        "ranking": null,
        "relative_trap_hits": null,
        "trap_hits": null,
      },
      Object {
        "date": "2017-12-31",
        "injections": null,
        "ranking": null,
        "relative_trap_hits": null,
        "trap_hits": null,
      },
      Object {
        "date": "2018-01-01",
        "injections": 282400,
        "ranking": "bad",
        "relative_trap_hits": 0.3,
        "trap_hits": 856,
      },
      Object {
        "date": "2018-01-02",
        "injections": 50000,
        "ranking": "good",
        "relative_trap_hits": 0.1,
        "trap_hits": 50,
      },
      Object {
        "date": "2018-01-03",
        "injections": null,
        "ranking": null,
        "relative_trap_hits": null,
        "trap_hits": null,
      },
    ],
    "sending_domain": "null.test.com",
    "total_injections": 332400,
  },
]
`;

exports[`Selectors: signals selected date should select date from react router 1`] = `"2018-02-01"`;

exports[`Selectors: signals spam hits details should be empty with only fill data when not loading 1`] = `
Object {
  "details": Object {
    "data": Array [
      Object {
        "date": "2017-12-27",
        "injections": null,
        "relative_trap_hits": null,
        "trap_hits": null,
      },
      Object {
        "date": "2017-12-28",
        "injections": null,
        "relative_trap_hits": null,
        "trap_hits": null,
      },
      Object {
        "date": "2017-12-29",
        "injections": null,
        "relative_trap_hits": null,
        "trap_hits": null,
      },
      Object {
        "date": "2017-12-30",
        "injections": null,
        "relative_trap_hits": null,
        "trap_hits": null,
      },
      Object {
        "date": "2017-12-31",
        "injections": null,
        "relative_trap_hits": null,
        "trap_hits": null,
      },
      Object {
        "date": "2018-01-01",
        "injections": null,
        "relative_trap_hits": null,
        "trap_hits": null,
      },
      Object {
        "date": "2018-01-02",
        "injections": null,
        "relative_trap_hits": null,
        "trap_hits": null,
      },
      Object {
        "date": "2018-01-03",
        "injections": null,
        "relative_trap_hits": null,
        "trap_hits": null,
      },
    ],
    "empty": true,
    "error": undefined,
    "loading": false,
  },
  "facet": "sending_domain",
  "facetId": "test.com",
  "subaccountId": "101",
}
`;

exports[`Selectors: signals spam hits details should select spam hits details 1`] = `
Object {
  "details": Object {
    "data": Array [
      Object {
        "date": "2017-12-27",
        "injections": null,
        "relative_trap_hits": null,
        "trap_hits": null,
      },
      Object {
        "date": "2017-12-28",
        "injections": null,
        "relative_trap_hits": null,
        "trap_hits": null,
      },
      Object {
        "date": "2017-12-29",
        "injections": null,
        "relative_trap_hits": null,
        "trap_hits": null,
      },
      Object {
        "date": "2017-12-30",
        "injections": null,
        "relative_trap_hits": null,
        "trap_hits": null,
      },
      Object {
        "date": "2017-12-31",
        "injections": null,
        "relative_trap_hits": null,
        "trap_hits": null,
      },
      Object {
        "date": "2018-01-01",
        "injections": 182400,
        "relative_trap_hits": 0.0025,
        "trap_hits": 456,
      },
      Object {
        "date": "2018-01-02",
        "injections": null,
        "relative_trap_hits": null,
        "trap_hits": null,
      },
      Object {
        "date": "2018-01-03",
        "injections": 35000,
        "relative_trap_hits": 0.001,
        "trap_hits": 35,
      },
    ],
    "empty": false,
    "error": null,
    "loading": false,
  },
  "facet": "sending_domain",
  "facetId": "test.com",
  "subaccountId": "101",
}
`;

exports[`Selectors: signals unsubscribe rate by cohort details should select details 1`] = `
Object {
  "details": Object {
    "data": Array [
      Object {
        "date": "2017-12-27",
        "p_14d_unsub": null,
        "p_365d_unsub": null,
        "p_90d_unsub": null,
        "p_new_unsub": null,
        "p_total_unsub": null,
        "p_uneng_unsub": null,
      },
      Object {
        "date": "2017-12-28",
        "p_14d_unsub": null,
        "p_365d_unsub": null,
        "p_90d_unsub": null,
        "p_new_unsub": null,
        "p_total_unsub": null,
        "p_uneng_unsub": null,
      },
      Object {
        "date": "2017-12-29",
        "p_14d_unsub": null,
        "p_365d_unsub": null,
        "p_90d_unsub": null,
        "p_new_unsub": null,
        "p_total_unsub": null,
        "p_uneng_unsub": null,
      },
      Object {
        "date": "2017-12-30",
        "p_14d_unsub": null,
        "p_365d_unsub": null,
        "p_90d_unsub": null,
        "p_new_unsub": null,
        "p_total_unsub": null,
        "p_uneng_unsub": null,
      },
      Object {
        "date": "2017-12-31",
        "p_14d_unsub": null,
        "p_365d_unsub": null,
        "p_90d_unsub": null,
        "p_new_unsub": null,
        "p_total_unsub": null,
        "p_uneng_unsub": null,
      },
      Object {
        "date": "2018-01-01",
        "p_14d_unsub": 5,
        "p_365d_unsub": 5,
        "p_new_unsub": 5,
        "p_total_unsub": 25,
        "p_uneng_unsub": 5,
      },
      Object {
        "date": "2018-01-02",
        "p_14d_unsub": null,
        "p_365d_unsub": null,
        "p_90d_unsub": null,
        "p_new_unsub": null,
        "p_total_unsub": null,
        "p_uneng_unsub": null,
      },
      Object {
        "date": "2018-01-03",
        "p_14d_unsub": 10,
        "p_365d_unsub": 10,
        "p_new_unsub": 10,
        "p_total_unsub": 50,
        "p_uneng_unsub": 10,
      },
    ],
    "empty": false,
    "error": null,
    "loading": false,
  },
  "facet": "sending_domain",
  "facetId": "test.com",
  "subaccountId": "101",
}
`;
